--- a/portfolio.css
+++ b/portfolio.css
@@ -137,3 +137,45 @@ margin-top: 130px;
   border-radius: 5px;
   box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
 }
+
+/* resume section styles */
+.resume-container{
+  /* display: flex; */
+  display: flex;
+  gap: 24px;
+}
+.experience-sub-title{
+  font-size: 20px;
+
+  font-weight: 600;
+  margin-bottom: 20px;
+
+}
+
+.experience-description, ,.experience-sub-title{
+  color: #757575;
+
+}
+.resumehr{
+  margin: 30px;
+}
+.resume-download-cv{margin-top: 50;}
+
+/* footer style */
+footer{
+  padding: 130px 230px;
+  display: flex;
+  gap: 100px;
+
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea{
+  height: 64px;
+  border-radius: 5px;
+  background-color: white;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  margin-bottom: 24px;
+  border: none;
+}
